--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
       <button class="form-btn" type="submit">Search</button>
     </form>
 
-    <div class="loader is-hidden">Loading images, please wait...</div>
+    <span class="loader is-hidden">Loading images, please wait...</span>
 
     <ul class="gallery"></ul>
 
